0030726: Visualization - change Selected state of owner in AIS_Selection